Fix vertical alignment for content

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -52,9 +52,11 @@ ul {
 }
 
 .content {
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 16px;
 }
 
